crates/tracing/tests/ui/instrument/field_not_in_allowlist.rs
use miden_node_tracing::instrument;

#[instrument(rpc: foo = bar)]
fn foo() {}

fn main() {}
